[metadata]
name = mode-ng
version = attr: mode.__version__
author = attr: mode.__author__
author_email = attr: mode.__contact__
maintainer = attr: mode.__maintainer__
url = attr: mode.__homepage__
description = attr: mode.__doc__
long_description = file: README.rst
keywords = asyncio, service, bootsteps, graph, coroutine, actor
license = BSD 3-Clause License
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Operating System :: POSIX
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS :: MacOS X
    Operating System :: Unix
    Environment :: No Input/Output (Daemon)
    Framework :: AsyncIO
    Intended Audience :: Developers

[tool:pytest]
testpaths = tests/unit tests/functional
python_classes = test_*

[flake8]
# classes can be lowercase, arguments and variables can be uppercase
# whenever it makes the code more readable.
ignore = N806, N802, N801, N803, I100, I201, I202, B008, W504, G200, S101, E203, E266, E501, W503
enable-extensions = G
max-line-length = 88
per-file-ignores =
    tests/*: S301,S403

[pydocstyle]
ignore = D102,D104,D105,D107,D203,D213,D406,D407,D413
