[metadata]
name = mode-ng
version = attr: mode.__version__
author = attr: mode.__author__
author_email = attr: mode.__contact__
maintainer = attr: mode.__maintainer__
url = attr: mode.__homepage__
description = attr: mode.__doc__
long_description = file: README.rst
keywords = asyncio, service, bootsteps, graph, coroutine, actor
license = BSD 3-Clause License
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Operating System :: POSIX
    Operating System :: Microsoft :: Windows
    Operating System :: MacOS :: MacOS X
    Operating System :: Unix
    Environment :: No Input/Output (Daemon)
    Framework :: AsyncIO
    Intended Audience :: Developers

[tool:pytest]
testpaths = tests/unit tests/functional
python_classes = test_*

[flake8]
# classes can be lowercase, arguments and variables can be uppercase
# whenever it makes the code more readable.
ignore = N801, N802, N803, N806, G200, E266, E203, E501, W503
# E266: Too many leading '#' for block comment
# E203, E501, W503: black compatibility
# pep8-naming
# N801: class names should use CapWords convention
# N802: function name should be lowercase
# N803: argument name should be lowercase
# N806: variable in function should be lowercase
# flake8-bugbear
# B008: Do not perform function calls in argument defaults.
# flake8-logging-format
# G200 Logging statements should not include the exception in logged string (use exception or exc_info=True)
enable-extensions = G
max-line-length = 88
per-file-ignores =
    tests/*: S101 ; Use of assert detected

[pydocstyle]
ignore = D102,D104,D105,D107,D203,D213,D406,D407,D413
